deploy: cd8e525b0f11c21b50c53dcd136d8dc57e0f3c2a

--- a/data.html
+++ b/data.html
@@ -284,6 +284,7 @@
 <img alt="_images/data_4_0.png" src="_images/data_4_0.png" />
 </div>
 </div>
+<p><a href="https://colab.research.google.com/github/shawnrhoads/executable-notebook-template/blob/main/docs/data.ipynb" target="_blank"><img alt="Open In Colab" src="https://colab.research.google.com/assets/colab-badge.svg" /></a></p>
 </div>
 </div>
 
